# speech_depth

./: .env.local.example  .gitignore  README.md  package-lock.json  pyproject.toml
.lexicons/nrc_emolex_ko/: Korean-NRC-EmoLex.txt
docs/: live-mvp-checklist.md  system-architecture.md
frontend/: .env  .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: main.tsx
frontend/src/app/: App.tsx  styles.css
frontend/src/components/: ConversationLandscape.tsx
frontend/src/lib/: api.ts  types.ts
scripts/: run_api.sh  run_worker.sh  setup_local.sh
src/asr_viz/: __init__.py  cli.py  worker.py
src/asr_viz/api/: main.py  schemas.py
src/asr_viz/core/: settings.py
src/asr_viz/db/: session.py
src/asr_viz/models/: __init__.py  analysis.py  common.py  job.py  live.py  media.py  stream.py  transcript.py
src/asr_viz/pipeline/: segmentation.py  types.py
src/asr_viz/providers/: analysis.py  analysis_v2.py  diarization.py  korean_emotion_words_filtered.txt  transcription.py
src/asr_viz/services/: archive_previews.py  bootstrap.py  jobs.py  live_sessions.py  media.py  pipeline.py  providers.py  streaming.py
src/asr_viz_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_analysis_provider.py  test_analysis_schema.py  test_cli.py  test_diarization.py  test_diarization_provider.py  test_live_session_api.py  test_pipeline.py  test_segmentation.py  test_streaming_ingestion.py  test_transcript_review_api.py  test_transcription_provider.py
