[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-viz-backend"
version = "0.1.0"
description = "Local-first backend for ingesting media, transcribing conversations, and storing sentence-level analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.128.0",
  "openai>=2.8.0",
  "pydantic>=2.12.0",
  "sqlalchemy>=2.0.0",
  "uvicorn>=0.37.0",
]

[project.optional-dependencies]
diarization = [
  "pyannote.audio>=3.3.2",
  "torch>=2.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
